[gd_scene load_steps=3 format=3 uid="uid://b7clufl4tpt6l"]

[ext_resource type="Script" uid="uid://cba682f3kg7n5" path="res://Minijuegos/Minijuego 1_2/Tablero/Minijuego1.gd" id="1_gshhy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwpn3"]
size = Vector2(32, 24)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gshhy")

[node name="Minijuego1" type="Area2D" parent="."]

[node name="MiniArea" type="CollisionShape2D" parent="Minijuego1"]
position = Vector2(544, 304)
shape = SubResource("RectangleShape2D_jwpn3")

[connection signal="input_event" from="Minijuego1" to="." method="_on_input_event"]
